<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"    
    android:background="#C1D6D6"
    android:windowActionBar="false"  
    tools:context=".AddActivity" >
	
	    <RelativeLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:background="#002e3e"
				>
	        
	        <Button
	            android:id="@+id/save_button"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/add_save_button"
	            android:layout_alignParentRight="true"
	            android:onClick="saveContact"
	            android:background="#002e3e"
	            android:textColor="#FFFFFF"
	            android:textStyle="bold"
	            />
	    	
	    	<View
	    	    android:layout_marginLeft="6dp"
	    	    android:layout_marginTop="10dp"
	    	    android:id="@+id/divider"
			    android:layout_width="2dp"
			    android:layout_height="30dp"
			    android:layout_toLeftOf="@id/save_button"
			    android:background="@android:color/darker_gray"/>
	    	
	        <Button
	            android:id="@+id/cancel_button"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentTop="true"
	            android:layout_toLeftOf="@+id/divider"
	            android:onClick="cancelAdd"
	            android:text="@string/add_cancel_button"
	            android:background="#002e3e"
	            android:textColor="#FFFFFF"
	            android:textStyle="bold" />
	        
	   	</RelativeLayout>
	    
	    <RelativeLayout  
	        android:background="#000000"      
	        android:layout_width="match_parent"
	    	android:layout_height="50dp" 
	    	android:orientation="horizontal">
	        
	        <ImageButton 
	            android:layout_alignParentRight="true"
	            android:layout_width="50dp"
	            android:layout_height="50dp"
	            android:src="@drawable/default_contact"
	            android:scaleType="centerInside"
	            android:adjustViewBounds="true"
	            android:contentDescription="@string/photo_description"/>
	        	
	        <TextView
	            android:layout_centerVertical="true"
	            android:id="@+id/create_contact"
	            android:layout_marginLeft="16dp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/add_header" 
		        android:textStyle="bold"
		        android:textSize="24sp"
		        android:textColor="#FFFFFF">
	            
	        </TextView>
	        
	        <View
	            android:layout_marginTop="10dp"
	            android:layout_below="@id/create_contact"
			    android:layout_width="fill_parent"
			    android:layout_height="2dp"
			    android:background="#002e3e"/>	
	
	    </RelativeLayout>
		
		<ScrollView 
	    android:id="@+id/ScrolView" 
	    android:layout_width="fill_parent" 
	    android:layout_height="fill_parent" >

	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >

		<TextView
	        android:layout_marginTop="10dp"
	        android:textColor="#000000"
	        android:textSize="20sp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="16dp"
	        android:textStyle="bold"
	        android:text="@string/add_name_header" />
	    
		<LinearLayout 
		    android:background="#C1D6D6"
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content" 
	    	android:orientation="horizontal">
			    
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/label_name_first"
			        android:layout_marginLeft="16dp" 
			        
			        style="@style/TextViewStyle"/>		    
			    
			    <EditText
			        android:layout_marginRight="16dp" 
			        android:id="@+id/add_first_name"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:hint="@string/add_label_name_hint"
			        android:textStyle="italic" />
			        
		    
	    </LinearLayout>
		
		<LinearLayout 
		    android:background="#C1D6D6"
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content" 
	    	android:orientation="horizontal">
			    
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/label_name_last"
			        android:layout_marginLeft="16dp" 
			        
			        style="@style/TextViewStyle"/>		    
			    
			    <EditText 
			        android:layout_marginRight="16dp"
			        android:id="@+id/add_last_name"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:hint="@string/add_label_name_hint"
			        android:textStyle="italic" />
	  
	    </LinearLayout>
	    
	    <View
	        android:layout_marginTop="10dp"
		    android:layout_width="fill_parent"
		    android:layout_height="2dp"
		    android:background="#002e3e"
		    android:layout_marginLeft="16dp"
	        android:layout_marginRight="16dp"/>	
	    
	    <TextView
	        android:layout_marginTop="10dp"
	        android:textColor="#000000"
	        android:textSize="20sp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="16dp"
	        android:textStyle="bold"
	        android:text="@string/add_contact_header" />
	    
	    <LinearLayout
	        android:layout_marginTop="5dp"
	        android:background="#C1D6D6"
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content" 
	    	android:orientation="horizontal">
			    
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/label_mobile_ph"
			        android:layout_marginLeft="16dp" 
	
			        style="@style/TextViewStyle"/>
			    
			    <EditText
			        android:layout_marginRight="16dp" 
			        android:id="@+id/add_mobile_ph"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:hint="@string/add_label_phone_hint"
			        android:textStyle="italic"/>
			    
	    </LinearLayout>
		
		<LinearLayout 
		    android:background="#C1D6D6"
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content" 
	    	android:orientation="horizontal">
			    
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/label_home_ph"
			        android:layout_marginLeft="16dp" 
			        
			        style="@style/TextViewStyle"/>		    
			    
			    <EditText 
			        android:layout_marginRight="16dp"
			        android:id="@+id/add_home_ph"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:hint="@string/add_label_phone_hint"
			        android:textStyle="italic" />
			        
		    
	    </LinearLayout>
	    
	    <LinearLayout
	        android:background="#C1D6D6"
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content" 
	    	android:orientation="horizontal">
			    
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/label_work_ph"
			        android:layout_marginLeft="16dp" 
	
			        style="@style/TextViewStyle"/>
			    
			    <EditText 
			        android:layout_marginRight="16dp"
			        android:id="@+id/add_work_ph"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:hint="@string/add_label_phone_hint"
			        android:textStyle="italic"/>
			    
	    </LinearLayout>
	    
	    <View
	        android:layout_marginTop="10dp"
		    android:layout_width="fill_parent"
		    android:layout_height="2dp"
		    android:background="#002e3e"
		    android:layout_marginLeft="16dp"
	        android:layout_marginRight="16dp"/>	
	    	
		<TextView
	        android:layout_marginTop="10dp"
	        android:textColor="#000000"
	        android:textSize="20sp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="16dp"
	        android:textStyle="bold"
	        android:text="@string/add_personal_header" />
	    
	    <LinearLayout
	        android:background="#C1D6D6"
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content" 
	    	android:orientation="vertical">
	
			    <LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content" >
					
					<TextView
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/add_label_address_street"
				        android:layout_marginLeft="16dp" 
		
				        style="@style/TextViewStyle"/>
			        
			        <EditText 
				        android:layout_marginRight="16dp"
				        android:id="@+id/add_home_street"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:hint="@string/add_label_address_hint"
				        android:textStyle="italic"/>
			    </LinearLayout>
			    
			    <LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content" >
					
					<TextView
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/add_label_address_suburb"
				        android:layout_marginLeft="16dp" 
		
				        style="@style/TextViewStyle"/>
			        
			        <EditText 
				        android:layout_marginRight="16dp"
				        android:id="@+id/add_home_suburb"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:hint="@string/add_label_address_hint"
				        android:textStyle="italic"/>
			    </LinearLayout>
			    
			    <LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content" >
					
					<TextView
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/add_label_address_city"
				        android:layout_marginLeft="16dp" 
		
				        style="@style/TextViewStyle"/>
			        
			        <EditText 
				        android:layout_marginRight="16dp"
				        android:id="@+id/add_home_city"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:hint="@string/add_label_address_hint"
				        android:textStyle="italic"/>
			    </LinearLayout>
		
		<LinearLayout 
		    android:background="#C1D6D6"
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content" 
	    	android:orientation="horizontal"
	    	android:layout_marginTop="10dp">
			    
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/label_email_address"
			        android:layout_marginLeft="16dp" 
			        
			        style="@style/TextViewStyle"/>		    
			    
			    <EditText 
			        android:layout_marginRight="16dp"
			        android:id="@+id/add_email"
			        android:inputType="textEmailAddress"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:hint="@string/add_label_address_hint"
			        android:textStyle="italic" />

	    </LinearLayout>			
			    
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content" 
	    	android:orientation="horizontal"
	    	android:background="#C1D6D6"
	    	android:layout_marginBottom="16dp">
			    
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/label_birth_date"
			        android:layout_marginLeft="16dp"
	
			        style="@style/TextViewStyle"/>
			    
			    <EditText 
			        android:id="@+id/add_dob_day"
			        android:layout_width="60dp"
			        android:layout_height="wrap_content"
			        android:hint="@string/add_label_hint_day"
			        android:textStyle="italic"/>
			    
			    <EditText 
			        android:id="@+id/add_dob_month"
			        android:layout_width="70dp"
			        android:layout_height="wrap_content"
			        android:hint="@string/add_label_hint_month"
			        android:textStyle="italic"/>
			    
			    <EditText 
			        android:id="@+id/add_dob_year"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:hint="@string/add_label_hint_year"
			        android:textStyle="italic"
			        android:layout_marginRight="16dp"/>
			    		    		    
			    </LinearLayout>
			    	        
	    </LinearLayout>
        </ScrollView>
</LinearLayout>
