<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViewActivity"
    android:background="#C1D6D6">
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#000000">
        
        <Button 
			android:id="@+id/editbutton"
	        android:layout_toLeftOf="@+id/deletebutton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="#FFFFFF"
	        android:text="@string/edit_button"
	        android:onClick="viewToEditScreen"/>
        
        <Button 
			android:id="@id/deletebutton"
			android:layout_alignParentRight="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="#FFFFFF"
			android:text="@string/delete_button"/>
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/back_button"
            android:onClick="viewToViewAllScreen"
          	>    
        </Button>
        
        <View
            android:layout_alignParentBottom="true"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="#002e3e"/>    
	    
    </RelativeLayout>
    
	<RelativeLayout
   	    android:orientation="vertical"
  	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:background="#002e3e">
	   

	    <ImageView
	        android:id="@+id/image_contact"
	        android:layout_width="200dp"
	        android:layout_height="200dp"
	        android:src="@drawable/default_contact"
	        android:contentDescription="@string/photo_description" />
		  	    
	    <TextView
	    	android:id="@+id/contact_name"	        
       		android:layout_toRightOf="@id/image_contact"
       		android:layout_centerVertical="true"
       		android:layout_marginLeft="10sp"
	    	android:textSize="24sp"
	    	android:textStyle="bold"
	    	android:textColor="#FFFFFF"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	       />
	    
	    
		 <View
		    android:layout_below="@+id/image_contact"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_toLeftOf="@id/save_button"
			android:background="#002e3e"/>
		 
		 <ImageButton 
		    android:id="@+id/star_button"
		    android:background="#002e3e"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:contentDescription="@string/photo_description"/>
	    
   	</RelativeLayout>

    
    <ScrollView 
        android:id="@+id/ScrolView" 
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent" 
        android:background="#C1D6D6"  >
		<LinearLayout
	   	    android:orientation="vertical"
	   	    android:layout_width="match_parent"
	   	    android:layout_height="wrap_content">

		   	<LinearLayout
		   	    android:layout_marginTop="10dp"
		   	    android:orientation="vertical"
		   	    android:layout_width="match_parent"
		   	    android:layout_height="wrap_content"
		   	    android:gravity="center_horizontal">
			    
		  	    <TextView
		  	       android:id="@+id/contact_header_mobile_ph"
			       android:layout_width="wrap_content"
			       android:layout_height="wrap_content"
			       android:text="@string/label_mobile_ph"
			       android:textStyle="bold"
			       
			       style="@style/TextViewStyle"/>
		   	    
		   	    <TextView
			       android:id="@+id/contact_mobile_ph"
			       android:layout_width="wrap_content"
			       android:layout_height="wrap_content"
		
			       
			       style="@style/NonHeaderTextViewStyle"/>
		   	</LinearLayout>
		    
		   	<LinearLayout
		   	    android:gravity="center_horizontal"
		   	    android:orientation="vertical"
		   	    android:layout_width="match_parent"
		   	    android:layout_height="wrap_content">
			    <TextView
			       android:id="@+id/contact_header_home_ph" 
			       android:layout_width="wrap_content"
			       android:layout_height="wrap_content"
			       android:text="@string/label_home_ph"
			       android:textStyle="bold"
			       
			       style="@style/TextViewStyle"/>
			    
			    <TextView
			       android:id="@+id/contact_home_ph"
			       android:layout_width="wrap_content"
			       android:layout_height="wrap_content"
			       
			       style="@style/NonHeaderTextViewStyle"/>		
		    </LinearLayout>
		    
		   	<LinearLayout
		   	    android:gravity="center_horizontal"
		   	    android:orientation="vertical"
		   	    android:layout_width="match_parent"
		   	    android:layout_height="wrap_content">
		  	    <TextView
		  	       android:id="@+id/contact_header_work_ph"
			       android:layout_width="wrap_content"
			       android:layout_height="wrap_content"
			       android:text="@string/label_work_ph"
			       android:textStyle="bold"
			       
			       style="@style/TextViewStyle"/>
		   	    
		   	    <TextView
			       android:id="@+id/contact_work_ph"
			       android:layout_width="wrap_content"
			       android:layout_height="wrap_content"
		
			       
			       style="@style/NonHeaderTextViewStyle"/>
		   	    
		   	    <View
		   	        android:id="@+id/view1"
			        android:layout_marginTop="10dp"
				    android:layout_width="fill_parent"
				    android:layout_height="1dp"
				    android:background="#002e3e"/>	
			        
		   	</LinearLayout>
		    
		   	<LinearLayout
		   	    android:gravity="center_horizontal"
		   	    android:layout_marginTop="10dp"
		   	    android:orientation="vertical"
		   	    android:layout_width="match_parent"
		   	    android:layout_height="wrap_content">
			    <TextView
					android:id="@+id/contact_header_email"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/label_email_address"
					android:textStyle="bold"
					
					style="@style/TextViewStyle"/>
			    
			    <TextView
					android:id="@+id/contact_email"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					
					style="@style/NonHeaderTextViewStyle"/>		
		    </LinearLayout>
		
		   	<LinearLayout
		   	    android:layout_marginTop="10dp"
		   	    android:gravity="center_horizontal"
		   	    android:orientation="vertical"
		   	    android:layout_width="match_parent"
		   	    android:layout_height="wrap_content">
			    
			    <TextView
					android:id="@+id/contact_header_home_address"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/label_home_address"
					android:textStyle="bold"
					
					style="@style/TextViewStyle"/>
			    
			    
			    <TextView
			       android:id="@+id/contact_home_street"
			       android:layout_width="wrap_content"
			       android:layout_height="wrap_content"
			       
			       style="@style/NonHeaderTextViewStyle"/>
			   
			    <TextView
			       android:id="@+id/contact_home_suburb"
			       android:layout_width="wrap_content"
			       android:layout_height="wrap_content"
			       
			       style="@style/NonHeaderTextViewStyle"/>	
			 	
			 	<TextView
			       android:id="@+id/contact_home_city"
			       android:layout_width="wrap_content"
			       android:layout_height="wrap_content"
			       
			       style="@style/NonHeaderTextViewStyle"/>		
			       
			    <View
			        android:id="@+id/view2"
			        android:layout_marginTop="10dp"
				    android:layout_width="fill_parent"
				    android:layout_height="1dp"
				    android:background="#002e3e"/>	
			       	
		    </LinearLayout>
		
		   	<LinearLayout
		   	    android:gravity="center_horizontal"
		   	    android:layout_marginTop="10dp"
		   	    android:layout_marginBottom="10dp"
		   	    android:orientation="vertical"
		   	    android:layout_width="match_parent"
		   	    android:layout_height="wrap_content">
			    <TextView
					android:id="@+id/contact_header_birth_date"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/label_birth_date"
					android:textStyle="bold"
					
					style="@style/TextViewStyle"/>
			    
			    <TextView
					android:id="@+id/contact_d_o_b"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					
					style="@style/NonHeaderTextViewStyle"/>		
		    </LinearLayout>
   		</LinearLayout>
   	</ScrollView>
</LinearLayout>
